--- a/src/html/home.html
+++ b/src/html/home.html
@@ -74,7 +74,7 @@
 				<img src="../img/logo-w.png" alt="">
 			</div>
 			<a href="javascript:void(0);" id="phMenu" class="menudown">
-				<span class="menu-open phone-text">多元文化</span>
+				<span class="menu-open phone-text">居士林</span>
 				<span class="menu-close hiden">关闭</span>
 				<span class="menu-back hiden">返回上一级</span>
 				<i class="iconfont down"></i>
