--- a/src/html/home.html
+++ b/src/html/home.html
@@ -192,129 +192,77 @@
 		<!-- lang end -->
 
 		<!-- road start -->
-		<section class="road">
+		<section class="road home-r">
 			<div class="wf-wrap">
 				<div class="tit">
 					<div class="tit-ch">
-						一带一路
+						学休家园
 					</div>
 					<div class="subtit-en">
-						The belt and road Initiative
+						Ju Shilin brief introduction
 					</div>
 				</div>
 				<div class="inner">
-					<p>  2013年9月，习近平主席在出访中亚国家期间，首次提出共建“丝绸之路经济带”的倡议。同年10月，郑重提出共同建设21世纪“海上丝绸之路”的设想。二者相连，共同构成了“一带一路”的重大倡议。提出近四年来，在党和政府的大力推动下，“一带一路”战略构想逐渐深入人心，得到了60多个国家和地区政府和人民的积极响应，其对沿线国家经济发展及未来世界格局的形成，产生其强大的震撼力量和深远的历史影响。“一带一路”发展战略的提出，是一次多元文化的大融通，代表了人类文明发展的新境界。在这个进程中，中国与欧亚大陆各国之间文化领域的交流合作不可或缺。中国不仅要为“一带一路”建设提供强大的“经济支撑”，中国佛教更应为化解“一带一路”上的各种与宗教有关的冲突提供“价值支撑”。
+					<p class="r-tit">
+						维摩讲堂
 					</p>
-					<p>历史上，“丝绸之路”不仅是中外贸易之路，也是宗教文化交流的信仰之路和多民族文化的融合之路，素有“佛教之路”的美誉。如今，与“一带一路”战略构想相呼应，包括佛教在内的广大宗教界同样可以在这一宏伟战略实施中发挥出自身独特的推动作用，为社会和谐发展和各民族友好交流贡献出自己独特的智慧和力量。</p>
+					<p class="r-in"> 
+						北京佛教居士林自1926年创办时起，即奉请太虚大师、常惺法师、慈舟法师、能海法师等高僧大德讲经说法。建国以后，正果法师长期担任居士林导师，经常为居士<br>
+	         			们讲授佛法。改革开放以后，相继礼请明旸法师、传印法师、净慧法师、惟贤法师、却西活佛、联波活佛、图布丹住持、胡雪峰住持等大德担任导师，指导信众学修为使信众能更规范<br>
+						为使信众能更规范、更系统的学习教理，以居士林大殿——维摩讲堂为基地，开展系列佛学讲座活动。礼请传印长老题写“维摩讲堂”牌匾，礼请中国佛学院觉灯法师<br>
+						为督学，礼请多位善知识为讲师。于2012年3月17日正式悬挂“维摩讲堂”牌匾，并举办了隆重的开学聘师典礼维摩讲堂的系列佛学讲座活动安排非常紧凑，同时开设了多门教理课程
+					</p>
+					<p class="r-tit">
+						修行百科
+					</p>
+					<p>
+						一身素衣，一杯清茶，一份宁静……他们累了，躁了，开始寻找迷失的自己。不一定要懂佛，也无需六根清静，修行不拘泥形式，最大的智慧在于“活在当下”，保持觉知，让久居城市的人学会放下内心的枷锁，学会享受当下的快乐。北京佛教居士林作为政府和信众之间的桥梁与纽带，作为专业的修行中心，陪同越来越多的都市人加入了修行行列，他们修行只为追求精神的宁静。<br>
+						“提起修行，多数人联想到的是身居寺庙，抄经念佛，似乎只有失意绝望之人，才会避世修行。事实上，修行是一种心灵的洗涤，人人都需要，并不是佛法的专"<br>
+						北京佛教居士林长年进行各种丰富的修行活动，包括精进念佛、初一十五法会、佛菩萨成道日法、读经法会、放生活动、受菩萨戒活动等.
+					</p>
 				</div>
 			</div>
 		</section>
 		<!-- road end -->
 
-		<!-- season start -->
-		<section class="season">
+		<!-- fload start -->
+		<section class="fload">
 			<div class="wf-wrap">
 				<div class="tit">
 					<div class="tit-ch">
-						五味人生
+						流通处
 					</div>
 					<div class="subtit-en">
-						the season of fate
-					</div>
-					<div class="subtit-ch">
-						三大语系介绍三大语系介绍三大语系介绍三大语系介绍三大语系介绍三大语系介绍三大语系介绍三大语系介绍三大语系介绍
+						Ju Shilin brief introduction
 					</div>
 				</div>
-				<ul class="inner">
-					<li class="sea-list">
+				<div class="inner">
+					<div class="pro">
 						<div class="pic">
-							<img src="../img/season01.png" alt="">
+							<img src="../img/pro01.png" alt="">
 						</div>
-						<div class="name">中医</div>
 						<div class="intro">
-							中国汉传佛教高调地崇尚素食主义还缘于国人对佛教教义的理解与诠释。中国佛教徒认为佛教最基本的伦理就是慈悲，而慈悲是扩充到包括动物在内的整体“众生”，杀生食肉正是对这一慈悲原则的最严重与根本性的颠覆。 
+							<p>品名：白砗磲念珠</p>
+							<p>规格：白砗磲扁圆珠直径8mm,高6mm,松石圆柱型隔珠直径8mm,高10mm</p>
+							<p>重量:  净重87克方式、价值观甚至生活方式。</p>
+							<a href="#">点击购买</a>
 						</div>
-						<a href="#">了解更多</a>
-					</li>
-					<li class="sea-list">
-						<div class="pic">
-							<img src="../img/season02.png" alt="">
-						</div>
-						<div class="name">艺苑</div>
-						<div class="intro">
-							中国书法的生命力在于"作字行文，文以载道。以书焕采，切时如需"这十六个字，而不单单是美不美的问题。书法艺术是一门学问，包罗万象，很厚重。中国书法艺术的生命力，目前还看不到它的尽头，前景无限美好 
-						</div>
-						<a href="#">了解更多</a>
-					</li>
-					<li class="sea-list">
-						<div class="pic">
-							<img src="../img/season03.png" alt="">
-						</div>
-						<div class="name">素食</div>
-						<div class="intro">
-							我们开展中医现代化事业，不是为了取消中医或西化中医，而是为了能科学理性地继承中医、发展中医。从1958年至今，几十年的中医现代研究成果充分证明和肯定了传统中医存在合理的科学内容，虽然客观上讲传统中医也存在很多不合理的非科学  
-						</div>
-						<a href="#">了解更多</a>
-					</li>
-				</ul>
-			</div>
-		</section>
-		<!-- season end -->
-
-		<!-- feeling start -->
-		<section class="feeling">
-			<div class="wf-wrap">
-				<div class="tit">
-					<div class="tit-ch">
-						多彩人生感悟
 					</div>
-					<div class="subtit-en">
-						Colorful life feeling
+					<div class="pro">
+						<div class="pic">
+							<img src="../img/pro01.png" alt="">
+						</div>
+						<div class="intro">
+							<p>品名：白砗磲念珠</p>
+							<p>规格：白砗磲扁圆珠直径8mm,高6mm,松石圆柱型隔珠直径8mm,高10mm</p>
+							<p>重量:  净重87克方式、价值观甚至生活方式。</p>
+							<a href="#">点击购买</a>
+						</div>
 					</div>
-					<div class="subtit-ch">
-						三大语系介绍三大语系介绍三大语系介绍三大语系介绍三大语系介绍三大语系介绍三大语系介绍三大语系介绍三大语系介绍
+					<div class="tobuy">
+						<a href="#">进入购买页面</a>
 					</div>
 				</div>
-				<ul class="inner">
-					<li class="feel-list">
-						<div class="pic">
-							<i class="iconfont teach"></i>
-						</div>
-						<div class="name">教育</div>
-						<div class="intro">
-							没规矩，不成才。没有原则的父母，教育出没有原则的孩子，并且失去孩子对他们的尊重
-						</div>
-					</li>
-					<li class="feel-list">
-						<div class="pic">
-							<i class="iconfont job"></i>
-						</div>
-						<div class="name">职场</div>
-						<div class="intro">
-							年轻时候的工作选择，你选择的不只是一份工作，而是一种思维习惯工作方式、价值观甚至生活方式
-						</div>
-					</li>
-					<li class="bddown"></li>
-					<li class="bddown"></li>
-					<li class="feel-list">
-						<div class="pic">
-							<i class="iconfont home"></i>
-						</div>
-						<div class="name">家庭</div>
-						<div class="intro">
-							原则和规矩，必须基于正确的价值观，否则就会和大众形成对抗，被排斥。“在原则和规矩后必须给孩子留下放飞的空间。对于鸟来说，规矩不是把翅膀剪掉，而是飞行的方向
-						</div>
-					</li>
-					<li class="feel-list">
-						<div class="pic">
-							<i class="iconfont charity"></i>
-						</div>
-						<div class="name">公益</div>
-						<div class="intro">
-							随着慈善法的正式实施，作为推动社会发展与进步的第三种力量，公益慈善事业迎来了前所未有的广阔舞台，发挥日益重要的作用
-						</div>
-					</li>
-				</ul>
 			</div>
 		</section>
 		<!-- feeling end -->
