--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,7 @@
 					<a href="html/home.html">居士林</a>
 				</li>
 				<li>
-					<a href="html/contact.html">在线报名</a>
+					<a href="html/charity.html">慈善事业</a>
 				</li>
 			</ul>
 		</header>
@@ -948,7 +948,7 @@
 						<a href="html/home.html">居士林</a>
 					</li>
 					<li class="foot-list">
-						<a href="#">慈善事业</a>
+						<a href="html/chairity.html">慈善事业</a>
 					</li>
 					<li class="foot-list">
 						<a href="#">志愿者园地</a>
