--- a/src/html/charity.html
+++ b/src/html/charity.html
@@ -62,7 +62,7 @@
 						</a>
 					</li>
 					<li>
-						<a href="html/volunteer.html">
+						<a href="volunteer.html">
 							志愿者园地
 						</a>
 					</li>
@@ -98,6 +98,9 @@
 				<li>
 					<a href="charity.html">慈善事业</a>
 				</li>
+				<li>
+					<a href="volunteer.html">志愿者园地</a>
+				</li>
 			</ul>
 		</header>
 		<div class="header"></div>
@@ -124,124 +127,82 @@
 		</div>
 		<!-- banner end -->
 
-		<!-- up start -->
-		<section class="up">
+		<!-- build start  -->
+		<section class="build">
 			<div class="wf-wrap">
-				<div class="left">
-					<div class="name">
-						觉灯法师
+				<div class="tit">
+					<div class="tit-ch">
+						共同建设，共享本林
 					</div>
-					<div class="pic">
-						<img src="../img/up01.png" alt="">
-					</div>
-					<div class="intro">
-						<p>
-							觉灯法师，1972年9月出生于湖北省武穴市梅川镇；1992年2月出家于安徽省九华山念佛禅院；1993年11月在江西庐山东林寺受具足戒； 1994年6月毕业于九华山佛学院； 1994年9月至普陀山佛学院天台宗专科班学习； 1997年9月考入中国佛学院；2003年9月考入本院研究生班依传印长老学修戒律专业；2005年9月任教本科班戒律学
-						</p>
+					<div class="subtit-en">
+						Co-construction,sharing the forest
 					</div>
 				</div>
-				<div class="center">
-					<div class="tit">
-						<div class="tit-ch">
-							居士林简介
-						</div>
-						<div class="subtit-en">
-							Ju Shilin brief introduction
-						</div>
-					</div>
-					<div class="cen-intro">
-						<p>
-							本林前身为北京毓春园居士林，于1926年由崔雲齋、丁淑秋居士创办。
-							1929年，恭请德高望重的胡子笏居士主持林务，并更名为华北居士林。首届林董主席为朱子桥，理事会主席为胡子笏。长期奉请诸山长老太虚、常惺、慈舟、倓虚、法尊、能海、道源及蒙藏地区喇嘛等莅临传法。1932年接受英国摩诃菩提会副会长包乐登博士请求，代请法师为期受戒。由胡子笏居士为其请授《瑜伽菩萨戒》。1938年，由周叔迦继任理事长。
-							1947年改称为北平居士林。
-							1949年新中国成立后注册名为北京居士林。1958年停止宗教活动。1979年恢复宗教活动。十方信众捐助财物得以渐次收回并复建林址。
-							2000年，定名为“北京佛教居士林”，成为经政府批准的宗教社会团体及宗教活动场所。次年8月8日，举行林址修复暨佛像开光双庆盛典。本林始终坚守的宗旨是为广大林员、信众提供解脱的利益。相继礼请正果法师、明旸法师、传印法师、净慧法师、惟贤法师、却西活佛、联波活佛、图布丹喇嘛、胡雪峰喇嘛为学修导师。先后礼请赵朴初居士、启功居士、刀述仁居士为名誉理事长。现任理事长为夏法圣居士。
-						</p>
-					</div>
-				</div>
-				<div class="right">
-					<div class="r-t">
-						<p class="t-tit">
-							使命背景
-						</p>
-						<div class="inner">
-							<p>
-								936年，胡公移居五台潜修，佛学家大善知识周叔迦，继董其事，接续法筵，与上海佛教居士林南北并称，极一时之盛。创北平佛教图书馆，设研究室，整理和编纂佛教的文物资料，例如佛教金石志、佛教
-							</p>
-						</div>
-					</div>
-					<div class="r-c">
-						<p class="t-tit">
-							本林发展史
-						</p>
-						<div class="inner">
-							<p>
-								936年，胡公移居五台潜修，佛学家大善知识周叔迦，继董其事
-								，接续法筵，与上海佛教居士林南北并称，极一时之盛。创北平佛教图书馆，设研究室，整理和编纂佛教的文物资料，例如
-							</p>
-						</div>
-					</div>
-					<div class="r-b">
-						<p class="t-tit">
-							历代邻长寄语
-						</p>
-						<div class="inner">
-							<p>
-								936年，胡公移居五台潜修，佛学家大善知识周叔迦，继董其事，接续法筵，与上海佛教居士林南北并称，极一时之盛。创北平佛教图书馆，设研究室，整理和编纂佛教的文物资料，例如佛教金石志、佛教
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="clear"></div>
-			</div>
-		</section>
-		<!-- up end -->
-
-		<!-- list start -->
-		<section class="list">
-			<div class="wf-wrap">
 				<ul class="inner">
-					<li class="li-list">
+					<li class="build-list">
+						<div class="pic">
+							<i class="iconfont fu"></i>
+						</div>
+						<div class="title">
+							福德助善
+						</div>
 						<a href="#">
-							<div class="pic">
-								<img src="../img/manlist01.png" alt="">
-								<div class="mask">
-									<div class="intro">
-										<div class="name">朱子桥</div>
-										<div class="info">在青岛创办佛学研究社。是年到北平先后兼任辅仁大学、民国大学、北京大学、中国大学、中法大学哲学系讲师</div>
-									</div>
-								</div>
-							</div>
+							了解更多
 						</a>
 					</li>
-					<li class="li-list">
+					<li class="build-list">
+						<div class="pic">
+							<i class="iconfont yin"></i>
+						</div>
+						<div class="title">
+							弘化助印
+						</div>
 						<a href="#">
-							<div class="pic">
-								<img src="../img/manlist01.png" alt="">
-								<div class="mask"></div>
-								<div class="intro">
-									<div class="name">朱子桥</div>
-									<div class="info">在青岛创办佛学研究社。是年到北平先后兼任辅仁大学、民国大学、北京大学、中国大学、中法大学哲学系讲师</div>
-								</div>
-							</div>
+							了解更多
 						</a>
 					</li>
-					<li class="li-list">
+					<li class="build-list">
+						<div class="pic">
+							<i class="iconfont chi"></i>
+						</div>
+						<div class="title">
+							人才扶持
+						</div>
 						<a href="#">
-							<div class="pic">
-								<img src="../img/manlist01.png" alt="">
-								<div class="mask"></div>
-								<div class="intro">
-									<div class="name">朱子桥</div>
-									<div class="info">在青岛创办佛学研究社。是年到北平先后兼任辅仁大学、民国大学、北京大学、中国大学、中法大学哲学系讲师</div>
-								</div>
-							</div>
+							了解更多
+						</a>
+					</li>
+					<li class="build-list">
+						<div class="pic">
+							<i class="iconfont sheng"></i>
+						</div>
+						<div class="title">
+							放生
+						</div>
+						<a href="#">
+							了解更多
+						</a>
+					</li>
+					<li class="build-list">
+						<div class="pic">
+							<i class="iconfont juan"></i>
+						</div>
+						<div class="title">捐物联系</div>
+						<a href="#">
+							了解更多
 						</a>
 					</li>
 				</ul>
+				<div class="intro-b">
+					呢款王立军案来看认为李开复我可否呢矢口抵赖奶粉时刻都能发生<br>
+					
+				</div>
+				<div class="intro-b">
+					呢款王立军案来看认为李开复我可否呢矢口抵赖奶粉时刻都能发生撒打算打算打算打算打算打算的撒打算打算
+				</div>
 			</div>
 		</section>
-		<!-- list end -->
+		<!-- build end -->
 
 		<!-- road start -->
 		<section class="road charity-r">
@@ -255,23 +216,13 @@
 					</div>
 				</div>
 				<div class="inner">
-					<p class="r-tit">
-						维摩讲堂
-					</p>
-					<p class="r-in"> 
-						北京佛教居士林自1926年创办时起，即奉请太虚大师、常惺法师、慈舟法师、能海法师等高僧大德讲经说法。建国以后，正果法师长期担任居士林导师，经常为居士<br>
-	         			们讲授佛法。改革开放以后，相继礼请明旸法师、传印法师、净慧法师、惟贤法师、却西活佛、联波活佛、图布丹住持、胡雪峰住持等大德担任导师，指导信众学修为使信众能更规范<br>
-						为使信众能更规范、更系统的学习教理，以居士林大殿——维摩讲堂为基地，开展系列佛学讲座活动。礼请传印长老题写“维摩讲堂”牌匾，礼请中国佛学院觉灯法师<br>
-						为督学，礼请多位善知识为讲师。于2012年3月17日正式悬挂“维摩讲堂”牌匾，并举办了隆重的开学聘师典礼维摩讲堂的系列佛学讲座活动安排非常紧凑，同时开设了多门教理课程
-					</p>
-					<p class="r-tit">
-						修行百科
-					</p>
-					<p>
-						一身素衣，一杯清茶，一份宁静……他们累了，躁了，开始寻找迷失的自己。不一定要懂佛，也无需六根清静，修行不拘泥形式，最大的智慧在于“活在当下”，保持觉知，让久居城市的人学会放下内心的枷锁，学会享受当下的快乐。北京佛教居士林作为政府和信众之间的桥梁与纽带，作为专业的修行中心，陪同越来越多的都市人加入了修行行列，他们修行只为追求精神的宁静。<br>
-						“提起修行，多数人联想到的是身居寺庙，抄经念佛，似乎只有失意绝望之人，才会避世修行。事实上，修行是一种心灵的洗涤，人人都需要，并不是佛法的专"<br>
-						北京佛教居士林长年进行各种丰富的修行活动，包括精进念佛、初一十五法会、佛菩萨成道日法、读经法会、放生活动、受菩萨戒活动等.
-					</p>
+					<div class="poem">
+						愿以此功德，庄严佛净土。<br>
+						上报四重恩，下济三途苦。<br>
+						若有见闻者，洗发菩提心。<br>
+						尽此一报身，同生极乐国。<br>
+					</div>
+					<a href="#">了解更多</a>
 				</div>
 			</div>
 		</section>
@@ -550,7 +501,7 @@
 						<a href="charity.html">慈善事业</a>
 					</li>
 					<li class="foot-list">
-						<a href="#">志愿者园地</a>
+						<a href="volunteer.html">志愿者园地</a>
 					</li>
 				</ul>
 				<div class="cpright">
